# noaide

./: .cargo-remote.toml  .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  IMPL-PLAN.md  LICENSE  Makefile  README.md  SECURITY.md  TESTING.md  audit.toml  docker-compose.prod.yml  docker-compose.yml  justfile  llms.txt
.audit/: plan-claude-ide.html
.claude/: CLAUDE.md
.claude/rules/: rust-patterns.md  solidjs-patterns.md  wasm-patterns.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ac-evidence-gate.yml  auto-label.yml  ci.yml  codeql.yml  issue-close-guard.yml  issue-quality.yml  nightly.yml  pr-lint.yml  prod-smoke.yml  release.yml
certs/: README.md
crates/noaide-common/: Cargo.toml
crates/noaide-common/src/: lib.rs
crates/noaide-ebpf/: Cargo.toml
crates/noaide-ebpf/src/: main.rs
crates/togaf-parser/: Cargo.toml
crates/togaf-parser/src/: diff.rs  emitter.rs  lib.rs  parser.rs  schema.rs  sections.rs
crates/togaf-parser/src/extractors/: adrs.rs  checklist.rs  gates.rs  meta.rs  mod.rs  risks.rs  tables.rs  work_packages.rs
crates/togaf-parser/tests/: integration.rs
crates/togaf-parser/tests/fixtures/: noaide-impl-plan.md
docs/: agent-operating-model.md  api.md  architecture.md  component-reference.md  deployment-guide.md  end-to-end-validation.md  evidence-loop-details.md  performance.md  security-deep-dive.md  show-hn-draft.md  supervision-boundaries.md  voice-setup.md  workshop-ai-coding-rollout.md  workshop-codex-rollout.md
docs/adr/: 001-production-deployment.md
docs/branding/: og-spec.md
examples/: README.md  audit-export-pattern.md  codex-session-spawn.md  intercept-api-request.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/e2e/: mobile.test.ts  smoke.spec.ts  smoke.test.ts
frontend/public/: coep-test.html  mobile-preview.html
frontend/src/: App.tsx
frontend/src/components/chat/: BreathingOrb.css  BreathingOrb.tsx  ChatPanel.tsx  ContextMeter.tsx  GhostMessage.tsx  InputField.tsx  LoadingProgress.tsx  MarkdownContent.tsx  MessageCard.tsx  MetaMessage.tsx  ModelBadge.tsx  SearchBar.tsx  SystemMessage.tsx  ThinkingBlock.tsx  TokenHeatmap.tsx  ToolCard.tsx  VirtualScroller.tsx  WorkingIndicator.tsx  expandedContext.ts  itemKeyContext.ts
frontend/src/components/cost/: CostDashboard.tsx
frontend/src/components/editor/: BlameGutter.tsx  ConflictBanner.tsx  DiffView.tsx  EditorPanel.tsx
frontend/src/components/files/: FileNode.test.ts  FileNode.tsx  FileTree.tsx
frontend/src/components/gallery/: GalleryPanel.tsx  Lightbox.tsx
frontend/src/components/gantt/: GanttBar.tsx  GanttChart.tsx  GanttPanel.tsx  TimeTracker.tsx
frontend/src/components/git/: BranchSelector.tsx  CommitHistory.tsx  StagingArea.tsx
frontend/src/components/mobile/: BottomTabBar.tsx  SwipeView.tsx  VoiceInput.tsx
frontend/src/components/network/: AuditPanel.tsx  InjectPanel.test.tsx  InjectPanel.tsx  InterceptQueue.test.ts  InterceptQueue.tsx  KeyManagementPanel.tsx  NetworkPanel.tsx  RateLimitPanel.tsx  RequestDetail.test.ts  RequestDetail.tsx  RequestRow.test.ts  RequestRow.tsx  RewritePanel.tsx  RuleEditor.tsx
frontend/src/components/profiler/: ProfilerPanel.tsx
frontend/src/components/sessions/: FontSlider.tsx  SessionCard.test.ts  SessionCard.tsx  SessionList.tsx  SessionStatus.tsx  ThemeSlider.tsx
frontend/src/components/settings/: SettingsPanel.tsx
frontend/src/components/shared/: Breadcrumb.tsx  CommandPalette.test.ts  CommandPalette.tsx  ContextMenu.tsx  ErrorBoundary.tsx  ExportDialog.tsx  KeyboardShortcutsHelp.tsx  SkeletonLoader.tsx  ToastContainer.tsx  WelcomeScreen.tsx
frontend/src/components/tasks/: KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx  TaskPanel.tsx
frontend/src/components/teams/: AgentCard.tsx  MessageBubble.tsx  SubagentTree.tsx  SwimlaneTL.tsx  TeamsPanel.tsx  TopologyGraph.tsx
frontend/src/hooks/: useHaptic.ts  useMediaQuery.test.ts  useMediaQuery.ts  useVoiceInput.ts
frontend/src/layouts/: MobileLayout.tsx  ThreePanel.tsx
frontend/src/lib/: export.ts  media-detect.ts  notifications.ts  ot-buffer.ts  profiler-metrics.ts
frontend/src/shortcuts/: keymap.test.ts  keymap.ts
frontend/src/stores/: file.ts  session.test.ts  session.ts
frontend/src/styles/: global.css  tokens.css
frontend/src/transport/: client.ts  codec.test.ts  codec.ts
frontend/src/types/: messages.test.ts  messages.ts
frontend/src/wasm/: wasm-modules.d.ts
frontend/src/workers/: compress.worker.ts  jsonl.worker.ts  markdown.worker.ts  pcm-capture.worklet.js
schemas/: messages.fbs
scripts/: README.md  setup-certs.sh  setup-runner.sh
server/: Cargo.toml  build.rs
server/benches/: ecs_cache.rs  jsonl_parser.rs
server/src/: lib.rs  main.rs
server/src/bus/: mod.rs  topics.rs  zenoh_bus.rs
server/src/cache/: mod.rs
server/src/db/: mod.rs  queries.rs  schema.rs
server/src/discovery/: mod.rs  scanner.rs
server/src/ecs/: components.rs  mod.rs  systems.rs  world.rs
server/src/files/: listing.rs  mod.rs  serve.rs
server/src/git/: blame.rs  mod.rs  status.rs
server/src/parser/: codex.rs  gemini.rs  jsonl.rs  mod.rs  types.rs
server/src/plan/: mod.rs  writer.rs
server/src/proxy/: audit.rs  classify.rs  handler.rs  inject.rs  keys.rs  mitm.rs  mod.rs  modes.rs  persist.rs  rewrite.rs  rules.rs  tls_mitm.rs  websocket.rs
server/src/session/: managed.rs  mod.rs  observed.rs  types.rs
server/src/teams/: discovery.rs  mod.rs  topology.rs
server/src/transport/: adaptive.rs  codec.rs  mod.rs  webtransport.rs
server/src/watcher/: ebpf.rs  events.rs  fallback.rs  mod.rs
server/whisper/: server.py
wasm/compress/: Cargo.toml
wasm/compress/src/: lib.rs
wasm/jsonl-parser/: Cargo.toml
wasm/jsonl-parser/src/: lib.rs
wasm/markdown/: Cargo.toml
wasm/markdown/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+55 files in other folders)
