[workspace]
resolver = "2"
members = [
    "crates/noaide-common",
    "crates/togaf-parser",
    "server",
    "wasm/jsonl-parser",
    "wasm/markdown",
    "wasm/compress",
    "xtask",
]
# eBPF crate is built separately via xtask (needs nightly + bpfel-unknown-none target)
exclude = ["crates/noaide-ebpf"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = "0.8"

# QUIC / WebTransport
quinn = "0.11"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
flatbuffers = "25"

# Event bus
zenoh = "1"
zenoh-shm = "1"

# ECS state engine
hecs = "0.10"

# Database
limbo = { version = "0.0", features = ["index_experimental"] }

# PTY management
portable-pty = "0.9"

# File watching
notify = "7"
aya = { version = "0.13", features = ["async_tokio"] }
aya-log = "0.2"
async-trait = "0.1"
noaide-common = { path = "crates/noaide-common", features = ["std"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
anyhow = "1"
zstd = "0.13"
