[package]
name = "noaide-server"
version = "0.1.0"
edition = "2024"
description = "noaide backend server"
license = "MIT"

[dependencies]
tokio.workspace = true
axum.workspace = true
quinn.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true
flatbuffers.workspace = true
zenoh.workspace = true
zenoh-shm.workspace = true
hecs.workspace = true
limbo.workspace = true
portable-pty.workspace = true
notify.workspace = true
aya.workspace = true
aya-log.workspace = true
async-trait.workspace = true
noaide-common.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
zstd.workspace = true
reqwest.workspace = true
regex.workspace = true
bytes.workspace = true
http-body-util.workspace = true
git2.workspace = true

[dev-dependencies]
tempfile = "3"
rcgen = "0.13"
