[package]
name = "noaide-server"
version = "0.1.0"
edition = "2024"
description = "noaide backend server"
license = "MIT"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
wtransport.workspace = true
quinn.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true
flatbuffers.workspace = true
zenoh.workspace = true
zenoh-shm.workspace = true
hecs.workspace = true
limbo.workspace = true
nix.workspace = true
notify.workspace = true
ignore.workspace = true
aya.workspace = true
aya-log.workspace = true
async-trait.workspace = true
noaide-common.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
base64.workspace = true
zstd.workspace = true
reqwest.workspace = true
regex.workspace = true
bytes.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
futures-util.workspace = true
tokio-stream.workspace = true
git2.workspace = true
tokio-tungstenite.workspace = true
rcgen.workspace = true
pem.workspace = true
time.workspace = true
dashmap.workspace = true
tokio-rustls.workspace = true
rustls-native-certs.workspace = true
ring.workspace = true
togaf-parser = { path = "../crates/togaf-parser" }

[dev-dependencies]
tempfile = "3"
