[package]
name = "noaide-ebpf"
version = "0.1.0"
edition = "2021"
description = "eBPF programs for noaide file system monitoring"
license = "MIT"

[[bin]]
name = "noaide-ebpf"
path = "src/main.rs"

[dependencies]
aya-ebpf = "0.1"
aya-log-ebpf = "0.1"
noaide-common = { path = "../noaide-common" }

[profile.dev]
opt-level = 2
overflow-checks = false
debug = 2
lto = true

[profile.release]
lto = true
panic = "abort"
